# dask-ray-demo

./: .env  Dockerfile  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  runbook.md  script.py  submit_ray_job.py
app/: main.py
app/letter_frequency/: letter_frequency.py
app/routers/: dask_router.py  ray_router.py  sync_router.py
app/square_number/: square_number.py
presentation/: intro.md  presentation.md
