[tool.poetry]
name = "dask-ray-demo"
version = "0.1.0"
description = "A project to demonstrate Dask and Ray distributed computing capabilities."
authors = ["Petr Janik <peta.janik@email.cz>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
dask = "^2023.3.1"
distributed = "^2023.3.1"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
bokeh = ">=2.4.2,<3"
ray = {extras = ["default"], version = "^2.3.0"}
setuptools = "^67.6.0"
google-api-python-client = "^2.81.0"
cryptography = "^39.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
